@@ -8,6 +8,7 @@ package com.powsybl.openloadflow.network.impl;
 
 import com.powsybl.commons.PowsyblException;
 import com.powsybl.iidm.network.*;
+import com.powsybl.math.graph.TraverseResult;
 
 import java.util.*;
 
@@ -16,16 +17,25 @@ import java.util.*;
  */
 public class ContingencyTripping {
 
-    private static final ContingencyTripping NO_OP_TRIPPING = new ContingencyTripping(Collections.emptyList());
+    private static final ContingencyTripping NO_OP_TRIPPING = new ContingencyTripping(Collections.emptyList(), (s, tt, nt, nbv) -> null);
 
-    private final List<? extends Terminal> terminals;
-
-    public ContingencyTripping(List<? extends Terminal> terminals) {
-        this.terminals = terminals;
+    @FunctionalInterface
+    private interface NodeBreakerTraverserFactory {
+        VoltageLevel.NodeBreakerView.TopologyTraverser create(
+                Set<Switch> stoppingSwitches, Set<Terminal> traversedTerminals, List<Terminal> neighbourTerminals,
+                VoltageLevel.NodeBreakerView nodeBreakerView);
     }
 
-    public ContingencyTripping(Terminal terminal) {
-        this(Collections.singletonList(terminal));
+    private final List<? extends Terminal> terminals;
+    private final NodeBreakerTraverserFactory nodeBreakerTraverserFactory;
+
+    public ContingencyTripping(List<? extends Terminal> terminals, NodeBreakerTraverserFactory nodeBreakerTraverserFactory) {
+        this.terminals = terminals;
+        this.nodeBreakerTraverserFactory = nodeBreakerTraverserFactory;
+    }
+
+    public ContingencyTripping(Terminal terminal, NodeBreakerTraverserFactory nodeBreakerTraverserFactory) {
+        this(List.of(terminal), nodeBreakerTraverserFactory);
     }
 
     public static ContingencyTripping createBranchTripping(Network network, Branch<?> branch) {
@@ -38,14 +48,14 @@ public class ContingencyTripping {
 
         if (voltageLevelId != null) {
             if (voltageLevelId.equals(branch.getTerminal1().getVoltageLevel().getId())) {
-                return new ContingencyTripping(branch.getTerminal1());
+                return new ContingencyTripping(branch.getTerminal1(), NodeBreakerTraverser::new);
             } else if (voltageLevelId.equals(branch.getTerminal2().getVoltageLevel().getId())) {
-                return new ContingencyTripping(branch.getTerminal2());
+                return new ContingencyTripping(branch.getTerminal2(), NodeBreakerTraverser::new);
             } else {
                 throw new PowsyblException("VoltageLevel '" + voltageLevelId + "' not connected to branch '" + branch.getId() + "'");
             }
         } else {
-            return new ContingencyTripping(branch.getTerminals());
+            return new ContingencyTripping(List.of(branch.getTerminal1(), branch.getTerminal2()), NodeBreakerTraverser::new);
         }
     }
 
@@ -53,25 +63,52 @@ public class ContingencyTripping {
         Objects.requireNonNull(network);
         Objects.requireNonNull(injection);
 
-        return new ContingencyTripping(injection.getTerminal());
+        return new ContingencyTripping(injection.getTerminal(), NodeBreakerTraverser::new);
     }
 
     public static ContingencyTripping createThreeWindingsTransformerTripping(Network network, ThreeWindingsTransformer twt) {
         Objects.requireNonNull(network);
         Objects.requireNonNull(twt);
 
-        return new ContingencyTripping(twt.getTerminals());
+        return new ContingencyTripping(twt.getTerminals(), NodeBreakerTraverser::new);
+    }
+
+    public static ContingencyTripping createBusbarSectionMinimalTripping(Network network, BusbarSection bbs) {
+        Objects.requireNonNull(network);
+        Objects.requireNonNull(bbs);
+
+        NodeBreakerTraverserFactory minimalTraverserFactory = (stoppingSwitches, neighbourTerminals, traversedTerminals, nbv) ->
+            // To have the minimal tripping ("no propagation") with a busbar section we still need to traverse the
+            // voltage level starting from that busbar section, stopping at first switch encountered (which will be
+            // marked as retained afterwards), in order to have the smallest lost bus in breaker view
+            // Note that neighbourTerminals is not filled up: we don't want to propagate to neighbouring voltage levels as
+            // this is a minimal tripping ("no propagation")
+            (nodeBefore, sw, nodeAfter) -> {
+                if (sw != null) {
+                    if (!sw.isOpen()) {
+                        stoppingSwitches.add(sw);
+                    }
+                    return TraverseResult.TERMINATE_PATH;
+                } else {
+                    nbv.getOptionalTerminal(nodeAfter).ifPresent(traversedTerminals::add);
+                    return TraverseResult.CONTINUE;
+                }
+            };
+        return new ContingencyTripping(bbs.getTerminal(), minimalTraverserFactory);
     }
 
     public static ContingencyTripping createContingencyTripping(Network network, Identifiable<?> identifiable) {
         switch (identifiable.getType()) {
             case LINE:
             case TWO_WINDINGS_TRANSFORMER:
+            case TIE_LINE:
                 return ContingencyTripping.createBranchTripping(network, (Branch<?>) identifiable);
             case DANGLING_LINE:
             case GENERATOR:
             case LOAD:
             case SHUNT_COMPENSATOR:
+            case STATIC_VAR_COMPENSATOR:
+            case BUSBAR_SECTION:
                 return ContingencyTripping.createInjectionTripping(network, (Injection<?>) identifiable);
             case THREE_WINDINGS_TRANSFORMER:
                 return ContingencyTripping.createThreeWindingsTransformerTripping(network, (ThreeWindingsTransformer) identifiable);
@@ -106,10 +143,10 @@ public class ContingencyTripping {
 
         if (terminal.getVoltageLevel().getTopologyKind() == TopologyKind.NODE_BREAKER) {
             traversedTerminals.add(terminal);
-            List<Terminal> nextTerminals = traverseNodeBreakerVoltageLevelsFromTerminal(terminal, switchesToOpen, traversedTerminals);
+            List<Terminal> neighbourTerminals = traverseNodeBreakerVoltageLevelsFromTerminal(terminal, switchesToOpen, traversedTerminals);
 
             // Recursive call to continue the traverser in affected neighbouring voltage levels
-            nextTerminals.forEach(t -> traverseFromTerminal(t, switchesToOpen, traversedTerminals));
+            neighbourTerminals.forEach(t -> traverseFromTerminal(t, switchesToOpen, traversedTerminals));
         } else {
             // In bus breaker view we have no idea what kind of switch it was in the initial node/breaker topology
             // so to keep things simple we do not propagate the fault
@@ -124,16 +161,12 @@ public class ContingencyTripping {
         int initNode = terminal.getNodeBreakerView().getNode();
         VoltageLevel.NodeBreakerView nodeBreakerView = terminal.getVoltageLevel().getNodeBreakerView();
 
-        NodeBreakerTraverser traverser = new NodeBreakerTraverser(switchesToOpen, initNode, nodeBreakerView);
+        List<Terminal> neighbourTerminals = new ArrayList<>();
+        VoltageLevel.NodeBreakerView.TopologyTraverser traverser = nodeBreakerTraverserFactory.create(
+                switchesToOpen, traversedTerminals, neighbourTerminals, nodeBreakerView);
         nodeBreakerView.traverse(initNode, traverser);
 
-        List<Terminal> nextTerminals = new ArrayList<>();
-        traverser.getTraversedTerminals().forEach(t -> {
-            nextTerminals.addAll(t.getConnectable().getTerminals()); // the already traversed terminal are also added for the sake of simplicity
-            traversedTerminals.add(t);
-        });
-
-        return nextTerminals;
+        return neighbourTerminals;
     }
 
 }
